--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -1,15 +1,6 @@
 {% extends 'core/base.html' %}
-
-{% load static %}
-
+{% load static  %}
 {% block title %}Iniciar Sesion{% endblock %}
-
-{% block background %}{% static 'core/img/about-bg.jpg' %}{% endblock %}
-
-{% block headers %}
-    <h1>Iniciar Sesion </h1>
-    <span class="subheading">Biografía</span>
-{% endblock %}
 
 {% block content %}
 <div class="container">
@@ -42,8 +33,7 @@
                                         <div class="form-group">
                                             <div class="custom-control custom-checkbox small">
                                                 <input type="checkbox" class="custom-control-input" id="customCheck">
-                                                <label class="custom-control-label" for="customCheck">Remember
-                                                    Me</label>
+                                                <label class="custom-control-label" for="customCheck">Recuerdame</label>
                                             </div>
                                         </div>
                                         <a href="home.html" class="btn btn-primary btn-user btn-block">
@@ -54,10 +44,10 @@
                                     </form>
                                     <hr>
                                     <div class="text-center">
-                                        <a class="small" href="forgot-password.html">Olvide contraseña?</a>
+                                        <a class="small" href="{% url 'recuperarContrasenia' %}">Olvide contraseña?</a>
                                     </div>
                                     <div class="text-center">
-                                        <a class="small" href="register.html">Crear Cuenta!</a>
+                                        <a class="small" href="{% url 'registrarse' %}">Crear Cuenta!</a>
                                     </div>
                                 </div>
                             </div>
