--- a/core/templates/core/editarEmpresa.html
+++ b/core/templates/core/editarEmpresa.html
@@ -1,5 +1,5 @@
 {% extends 'core/base.html' %}
-{% block title %}Empresas{% endblock %}
+{% block title %}Editar Empresas{% endblock %}
 
 {% block content %}
     
@@ -12,7 +12,7 @@
                    
                     <fieldset>
                         
-                        <legend class="text-center header"> Crear Empresa </legend>
+                        <legend class="text-center header"> Editar Empresa  </legend>
                         <div class="form-group">
                                 <label for="image">Logo de la Empresa</label>
                                 <input type="file" id="image" name="image" accept="image/*">
