--- a/core/templates/core/editarProductoServicio.html
+++ b/core/templates/core/editarProductoServicio.html
@@ -1,9 +1,7 @@
 {% extends 'core/base.html' %}
-{% block title %}Empresas{% endblock %}
-
+{% block title %}Editar Productos o Servicios{% endblock %}
 {% block content %}
-    
-    <br>
+       <br>
     <br>
     <br>
     <br>
@@ -18,8 +16,5 @@
     <br>
     <br>
     
-      
-
 {% endblock %}
- 
  
