--- a/core/templates/core/reportes.html
+++ b/core/templates/core/reportes.html
@@ -1,7 +1,20 @@
 {% extends 'core/base.html' %}
 {% block title %}Reportes{% endblock %}
 {% block content %}
-    <h1>Mi empresa</h1>
-    <p>Reportes Generales</p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h1>PÁGINA EN CONSTRUCCIÓN</h1>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    
 {% endblock %}
  
