--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -118,7 +118,12 @@
                         <h6 class="collapse-header">Servicios:</h6>
                         <a class="collapse-item" href="{% url 'empresas' %}">Empresas</a>
                         <a class="collapse-item" href="{% url 'crearEmpresa' %}">Crear Empresas</a>
-                        <a class="collapse-item" href="{% url 'productoServicios' %}">Producto y Servicios</a>
+                        <a class="collapse-item" href="{% url 'productoServicios' %}">Producto o Servicios</a>
+                        <a class="collapse-item" href="{% url 'CrearProductos' %}">Crear Producto o Servicios</a>
+                        <a class="collapse-item" href="{% url 'editarProductoServicio' %}">Editar Producto o Servicios</a>
+
+                        <div class="collapse-divider"></div>
+                        <h6 class="collapse-header">Reportes:</h6>
                         <a class="collapse-item" href="{% url 'reportes' %}">Reportes</a>
                     </div>
                 </div>
