crear empresa mas validaaciones y editar

--- a/core/templates/core/crearEmpresa.html
+++ b/core/templates/core/crearEmpresa.html
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col-md-12">
             <div class="well well-sm">
-                <form  class="form-horizontal" method="POST">
+                <form  class="form-horizontal" method="POST"  enctype ="multipart/form-data">
                     {% csrf_token %}
                    
                     <fieldset>
