--- a/core/templates/core/editarEmpresa.html
+++ b/core/templates/core/editarEmpresa.html
@@ -15,25 +15,25 @@
                         <legend class="text-center header"> Editar Empresa  </legend>
                         <div class="form-group">
                                 <label for="image">Logo de la Empresa</label>
-                                <input type="file" id="image" name="image" accept="image/*">
+                                <img src="ftperfil/img.jpg" height="40px" alt="img">
                             </div><br>
                         <div class="form-group">
                             <span class="col-md-1 col-md-offset-2 text-center"><i class="material-icons"></i></span>
                             <div class="col-md-8">
-                                <input id="empresa" name="empresa" type="text" placeholder="Nombre Empresa......" class="form-control">
+                                <input id="empresa" name="empresa" type="text" value={{editarEmpresa.6}} class="form-control">
                             </div>
                         </div>
                         <div class="form-group">
                             <span class="col-md-1 col-md-offset-2 text-center"><i class=""></i></span>
                             <div class="col-md-8">
-                                <input id="slogan" name="slogan" type="text" placeholder="Eslogan......." class="form-control">
+                                <input id="slogan" name="slogan" type="text" value={{editarEmpresa.2}}  class="form-control">
                             </div>
                         </div>
 
                         <div class="form-group">
                             <span class="col-md-1 col-md-offset-2 text-center"><i class=""></i></span>
                             <div class="col-md-8">
-                                <input id="desc" name="desc" type="text" placeholder="Descripcion de la empresa......" class="form-control">
+                                <input id="desc" name="desc" type="text" value={{editarEmpresa.1}}    class="form-control">
                             </div>
                         </div>
                          <!-- horario de atencion-->
@@ -49,19 +49,19 @@
                         <div class="form-group">
                             <span class="col-md-1 col-md-offset-2 text-center"><i class=""></i></span>
                             <div class="col-md-8">
-                                <input id="face" name="face" type="text" placeholder="Facebook...." class="form-control">
+                                <input id="face" name="face" type="text" value={{editarEmpresa.3}}   class="form-control">
                             </div>
 
                             <span class="col-md-1 col-md-offset-2 text-center"><i class=""></i></span>
                              <div class="col-md-8">
-                                <input id="twritter" name="twritter" type="text" placeholder="Twritter...." class="form-control">
+                                <input id="twritter" name="twritter" type="text" value={{editarEmpresa.8}}  class="form-control">
                             </div>
 
                         </div>
                         <div class="form-group">
                             <span class="col-md-1 col-md-offset-2 text-center"><i class=""></i></span>
                             <div class="col-md-8">
-                                <input id="web" name="web" type="text" placeholder="Pagina Web......" class="form-control">
+                                <input id="web" name="web" type="text" value={{editarEmpresa.12}}   class="form-control">
                             </div>
                         </div>
     								
@@ -90,7 +90,7 @@
                         <div class="form-group">
                             <span class="col-md-1 col-md-offset-2 text-center"><i class=""></i></span>
                             <div class="col-md-8">
-                                <input id="porcentaje" name="porcentaje" type="text" placeholder=" % de comision" class="form-control">
+                                <input id="porcentaje" name="porcentaje" value={{editarEmpresa.16}}  type="text" class="form-control">
                             </div>
                         </div>
                         
