--- a/core/templates/core/editarEmpresa.html
+++ b/core/templates/core/editarEmpresa.html
@@ -2,20 +2,22 @@
 {% block title %}Editar Empresas{% endblock %}
 
 {% block content %}
-    
+    {{editarEmpresa}}
     <div class="container">
     <div class="row">
         <div class="col-md-12">
             <div class="well well-sm">
-                <form  class="form-horizontal" method="POST">
+                <form  class="form-horizontal" method="POST" >
                     {% csrf_token %}
                    
                     <fieldset>
                         
                         <legend class="text-center header"> Editar Empresa  </legend>
+
+
                         <div class="form-group">
                                 <label for="image">Logo de la Empresa</label>
-                                <img src="ftperfil/img.jpg" height="40px" alt="img">
+                                <img src="{{object.img}}" height="40px" alt="img">
                             </div><br>
                         <div class="form-group">
                             <span class="col-md-1 col-md-offset-2 text-center"><i class="material-icons"></i></span>
@@ -33,15 +35,15 @@
                         <div class="form-group">
                             <span class="col-md-1 col-md-offset-2 text-center"><i class=""></i></span>
                             <div class="col-md-8">
-                                <input id="desc" name="desc" type="text" value={{editarEmpresa.1}}    class="form-control">
+                                <input id="descripcion" name="descripcion" type="text" value={{editarEmpresa.1}}    class="form-control">
                             </div>
                         </div>
                          <!-- horario de atencion-->
                         <label for="Horarios">  Horario de Atencion</label>
                         <div class="form-group">
                             <div class="col-md-8">
-                                <input id="abre" name="abre" type="text" placeholder="Hora Apertura: (07:00)" class="form-control"> <br>
-                                <input id="cierra" name="cierra" type="text" placeholder="Hora Cierre: (23:59)" class="form-control">
+                                <input id="abre" name="abre" type="text" value={{editarEmpresa.18}}  class="form-control"> <br>
+                                <input id="cierra" name="cierra" type="text" value={{editarEmpresa.19}}  class="form-control">
                             </div>
                         </div>
                        
@@ -77,7 +79,7 @@
                                                 
                                                 {% for i in categoriaempresa %}
                                                     
-                                                    <input type="checkbox" name= "opcion1"value= "{{i.1}}"> {{i.1}} <br />
+                                                    <input type="checkbox" name= "opcion1"value= "{{i.1}}">  <br />
                                                     
                                                 {% endfor %}
                                             
