--- a/core/templates/core/productoServicios.html
+++ b/core/templates/core/productoServicios.html
@@ -108,7 +108,7 @@
                                                 </td>
 
                                                 <td>{{i.3}}</td>
-                                                <td><a href='edit/{{i.0}}'> Editar</a> | <a href='delete/{{i.0}}'>Eliminar </a> </td>
+                                                <td><a href='editarProductoServicio/{{i.0}}'> Editar</a> | <a href='delete/{{i.0}}'>Eliminar </a> </td>
                                             </tr>
                                         {% endfor %}
                                     </tbody>
